--- a/src/BaseRoot/style.css
+++ b/src/BaseRoot/style.css
@@ -1,8 +1,8 @@
-.Base-raiz{
+.Base-raiz {
     width: 100vw;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    background-color: #c7c7c7;
 }
